<resources>
    <string name="app_name">Bookah</string>

    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in nulla et dui molestie feugiat. Vestibulum sit amet facilisis mi,
        euismod iaculis erat. Pellentesque ante est, egestas nec laoreet id, tincidunt vel felis. In sit amet sapien non tortor maximus bibendum elementum ut urna.
        Aliquam fermentum sapien ipsum, sit amet tincidunt elit gravida nec. Etiam eu orci id quam auctor tempus. Praesent feugiat vel risus eu scelerisque.
        Pellentesque sit amet sagittis sem. Morbi in quam eu metus dignissim porttitor. Vivamus molestie dignissim tortor sit amet cursus. Etiam id tellus sit amet sapien
        tincidunt porttitor. Donec in orci vestibulum lectus porta facilisis. Donec feugiat tortor eget hendrerit sodales.
        Nunc sed vulputate neque. Duis at magna at nunc congue vestibulum non vitae risus. Etiam lacinia felis dui. Fusce vulputate arcu sed interdum pharetra.
        Phasellus fringilla sem quis urna blandit, sed lacinia lorem porta. Praesent dolor dui, vulputate vitae nunc sit amet, efficitur scelerisque quam.
        Integer augue velit, rutrum id dictum id, vulputate vel turpis. Sed ac neque consequat, ultricies diam at, mattis turpis. Integer dignissim eros facilisis tincidunt
        blandit.
        In convallis dui at nibh porttitor aliquam. Nam tincidunt nunc tincidunt lacus convallis, non rhoncus magna aliquet. Morbi hendrerit, nisl ac sodales,
        elit velit luctus magna, eget scelerisque nulla neque vitae magna. Cras ac justo at risus posuere porta. Ut libero risus, laoreet a nibh a, rhoncus iaculis urna.
        Integer elit dolor, porttitor a nisl id, cursus tempor nibh. Aliquam erat volutpat. In non placerat risus, consectetur tristique urna. Pellentesque habitant morbi
        tristique senectus et netus et malesuada fames ac turpis egestas. Proin ut rutrum ante. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus at malesuada
        neque, at gravida urna.
        Duis et laoreet diam, sit amet fringilla neque. Pellentesque quis efficitur metus. Morbi scelerisque sollicitudin auctor. Duis quis sapien et eros molestie lacinia.
        Praesent quis ex id mauris sagittis hendrerit. Aliquam vel quam mauris. Pellentesque gravida laoreet mi at tempor. Suspendisse potenti. Nulla facilisi. Sed massa risus,
        rutrum luctus sagittis ac, fermentum at metus. Vivamus erat velit, tristique ac ligula sit amet, feugiat facilisis ante. Aliquam commodo elementum posuere. Ut nec porta
        diam, nec sodales massa. Nam ullamcorper ligula eleifend, hendrerit diam sit amet, imperdiet odio. Vestibulum at mi mollis, semper odio non, sagittis diam. Nullam in
        interdum nisl.
        Nam ac urna nulla. Aenean eget libero ullamcorper, suscipit lacus at, porttitor turpis. Curabitur vitae tincidunt velit. Nullam non neque sit amet lectus suscipit congue.
        Ut eu erat lacinia, vehicula tortor vitae, tincidunt ipsum. Quisque sit amet nibh ut lectus porttitor volutpat id et dui. Cras nec lectus nec sapien tempus sollicitudin
        in vitae neque. Quisque diam erat, eleifend quis sagittis ut, dapibus non dui.</string>

    <string name="ivLogo_Description">Image of the app\'s logo</string>

    //Buttons
    <string name="btnForgetPassword_text">Forgot Password?</string>
    <string name="btnLogin_text">Login</string>
    <string name="btnRegister_text">Register</string>
    <string name="btnPlaceOrder_text">Place Order</string>

    //Actual TextViews
    <string name="loginWelcome_text">Welcome Back</string>
    <string name="loginContinue_text">Login to continue</string>
    <string name="cbRememberMe_text">Remember Me</string>
    <string name="registerWelcome_text">Welcome, </string>
    <string name="registerStart_text">Register to start your new journey</string>
    <string name="registerProgress_text">Busy registering user…please wait…</string>
    <string name="registerAccount_text">No Account? Register here</string>
    <string name="haveAccount_text">Already registered? Login here</string>
    <string name="tvHeading_text">Skip The Queue\nLet us serve you…</string>
    <string name="tvFirebaseName_text">Hello\u0020\u0020</string>
    <string name="tvVerifyEmail_text">Please check the inbox of your provided email address to verify your account</string>
    <string name="tvTotal_text">Total:</string>

    //Hints
    <string name="firstName_hint">First Name</string>
    <string name="lastName_hint">Last Name</string>
    <string name="IDNumber_hint">ID Number</string>
    <string name="phoneNumber_hint">Phone Number</string>
    <string name="email_hint">Email Address</string>
    <string name="password_hint">Password</string>
    <string name="passwordConfirm_hint">Confirm Password</string>


    //Errors
    <string name="email_error">Email Address Is Required!</string>
    <string name="name_error">First Name Is Required!</string>
    <string name="surname_error">Last Name Is Required!</string>
    <string name="phoneNumber_error">Cellphone Is Required!</string>
    <string name="idNumber_error">ID Number Is Required!</string>
    <string name="password_error">Password Is Required!</string>
    <string name="current_password_error">Current Password Is Required!</string>
    <string name="password_confirmation_error">Password Confirmation Is Required!</string>

    //Example TextViews
    <string name="tvUser_text">User</string>
    <string name="bookISBN_text">Book ISBN</string>
    <string name="bookTitle_text">Book Title</string>
    <string name="bookAuthor_text">Book Author</string>
    <string name="bookPrice_text">Book Price</string>
    <string name="bookEdition_text">Book Edition</string>
    <string name="bookPublisher_text">Book Publisher</string>
    <string name="bookCondition_text">Book Condition</string>
    <string name="bookDescription_text">Book Description</string>
    <string name="verifyEmail_text">Verify Email</string>

    //OtherNavDrawerStuff
    <string name="drawerOpen">Open navigation drawer</string>
    <string name="drawerClose">Close navigation drawer</string>
    <string name="title_activity_home">Home</string>
    <string name="search_books">Search…</string>

    //Dashboard
    <string name="browse_books">Browse Books</string>
    <string name="upload_books">Upload Books</string>
    <string name="request_books">My Book Requests</string>
    <string name="book_cart">My Cart</string>
    <string name="book_orders">My Orders</string>
    <string name="about">About</string>
    <string name="contact">Contact Us</string>
    <string name="help">FAQ</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="home">Home</string>
    <string name="navHome">navHome</string>
    <string name="navFavorites">Favorites</string>
    <string name="navProfile">Profile</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="uploadBookInstructions_text">To upload your book, please add a photo of the book and enter all book details below:</string>
    <string name="orderAddress_text">Address</string>
    <string name="addressComment_hint">Comment and/or\nadditional instructions</string>
</resources>