<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:orientation="vertical"
    android:background="@color/colorTextIcons"
    tools:context=".Activities.Login">

    <ImageView
        android:id="@+id/login_logo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/logo_black"
        android:layout_gravity="center"
        android:contentDescription="@string/ivLogo_Description"/>

    <TextView
        android:id="@+id/login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:fontFamily="@font/bungee_inline"
        android:text="@string/loginWelcome_text"
        android:textColor="@color/colorPrimaryText"
        android:textSize="40sp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:text="@string/loginContinue_text"
        android:textSize="18sp"
        android:textColor="@color/violet"/>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/login_nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="2dp"
        android:clipToPadding="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/login_email"
                app:errorEnabled="true"
                app:errorTextAppearance="@style/ErrorText"
                app:startIconDrawable="@drawable/ic_email"
                app:startIconTint="@color/black"
                app:endIconMode="clear_text"
                app:endIconTint="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_hint"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_loginEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/login_password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:hint="@string/password_hint"
                android:textColorHint="@color/colorSecondaryText"
                app:errorEnabled="true"
                app:errorTextAppearance="@style/ErrorText"
                app:startIconDrawable="@drawable/ic_security"
                app:startIconTint="@color/black"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/black">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_loginPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <CheckBox
                android:id="@+id/cb_StayLoggedIn"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/cbRememberMe_text"
                android:textColor="@color/colorPrimaryText"/>

            <Button
                android:id="@+id/btnReset"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:backgroundTint="@color/flamingo"
                android:fontFamily="@font/capriola"
                android:text="@string/btnForgetPassword_text"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:cornerRadius="12dp" />

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_marginBottom="5dp"
                android:backgroundTint="@color/Tiber"
                android:fontFamily="@font/capriola"
                android:text="@string/btnLogin_text"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:cornerRadius="10dp" />

            <TextView
                android:id="@+id/tvRegisterAccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:fontFamily="@font/capriola"
                android:text="@string/registerAccount_text"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryText"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</LinearLayout>