<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@color/colorTextIcons"
    tools:context=".Activities.Register">

    <ProgressBar
        android:id="@+id/register_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="200dp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tvLoad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_horizontal"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/register_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/register_logo"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:src="@drawable/logo_black"
            android:contentDescription="@string/ivLogo_Description"/>

        <TextView
            android:id="@+id/register_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registerWelcome_text"
            android:textSize="40sp"
            android:fontFamily="@font/bungee_inline"
            android:textColor="@color/colorPrimaryText"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registerStart_text"
            android:textSize="18sp"
            android:textColor="@color/violet"/>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/register_nestedScrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/reg_firstName"
                    app:errorEnabled="true"
                    app:errorTextAppearance="@style/ErrorText"
                    app:startIconDrawable="@drawable/ic_person"
                    app:startIconTint="@color/black"
                    app:endIconMode="clear_text"
                    app:endIconTint="@color/black"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/firstName_hint"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_regFirstName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName|textCapSentences"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/reg_lastName"
                    app:errorEnabled="true"
                    app:errorTextAppearance="@style/ErrorText"
                    app:startIconDrawable="@drawable/ic_person"
                    app:startIconTint="@color/black"
                    app:endIconMode="clear_text"
                    app:endIconTint="@color/black"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/lastName_hint"
                    android:transitionName="username_tran"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_regLastName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName|textCapSentences"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/reg_id"
                    app:errorEnabled="true"
                    app:errorTextAppearance="@style/ErrorText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/IDNumber_hint"
                    app:counterMaxLength="13"
                    app:startIconDrawable="@drawable/ic_identity"
                    app:startIconTint="@color/black"
                    app:endIconMode="clear_text"
                    app:endIconTint="@color/black"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_regId"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/reg_phoneNumber"
                    app:errorEnabled="true"
                    app:errorTextAppearance="@style/ErrorText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phoneNumber_hint"
                    android:textColorHint="@color/colorSecondaryText"
                    app:counterMaxLength="10"
                    app:startIconDrawable="@drawable/ic_smartphone"
                    app:startIconTint="@color/black"
                    app:endIconMode="clear_text"
                    app:endIconTint="@color/black"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_regPhoneNumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/reg_email"
                    app:errorEnabled="true"
                    app:errorTextAppearance="@style/ErrorText"
                    app:startIconDrawable="@drawable/ic_email"
                    app:startIconTint="@color/black"
                    app:endIconMode="clear_text"
                    app:endIconTint="@color/black"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email_hint"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_regEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/reg_password"
                    app:errorEnabled="true"
                    app:errorTextAppearance="@style/ErrorText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password_hint"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/black"
                    app:startIconDrawable="@drawable/ic_security"
                    app:startIconTint="@color/black"
                    android:transitionName="password_tran"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_regPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword">
                    </com.google.android.material.textfield.TextInputEditText>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/reg_confirmPassword"
                    app:errorEnabled="true"
                    app:errorTextAppearance="@style/ErrorText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/passwordConfirm_hint"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/black"
                    app:startIconDrawable="@drawable/ic_security"
                    app:startIconTint="@color/black"
                    android:transitionName="password_tran"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_regConfirmPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword">
                    </com.google.android.material.textfield.TextInputEditText>
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btnRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_marginBottom="5dp"
                    android:backgroundTint="@color/Tiber"
                    android:fontFamily="@font/capriola"
                    android:text="@string/btnRegister_text"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:cornerRadius="8dp" />

                <TextView
                    android:id="@+id/tvAlreadyRegistered"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:fontFamily="@font/capriola"
                    android:text="@string/haveAccount_text"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </LinearLayout>

</LinearLayout>