<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    tools:context=".Activities.SplashScreens.VerificationSplash">

    <LinearLayout
        android:id="@+id/layout_verify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/gifEmail"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/logo_black"
            android:layout_gravity="center"
            android:contentDescription="@string/ivLogo_Description"/>

        <TextView
            android:id="@+id/emailVerification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bungee_inline"
            android:text="@string/verifyEmail_text"
            android:textColor="@color/colorPrimaryText"
            android:textSize="40sp"/>

    </LinearLayout>

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/gifEmail"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/ic_email_gif"
        app:layout_constraintBottom_toTopOf="@id/tvVerifyEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_verify"/>

    <TextView
        android:id="@+id/tvVerifyEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:text="@string/tvVerifyEmail_text"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gifEmail" />

</androidx.constraintlayout.widget.ConstraintLayout>